# auto_news_translate

./: .gitignore  Dockerfile  README.md  ai_translator.py  crawler.py  fit_markdown_reult.txt  main.py  newsbot.py  pyproject.toml  raw_markdown_reult.txt
config/: config.py  feeds.py  rss.py  rss_feeds.py  rss_settings.py
tests/: test_config.py  test_crawler.py
