[project]
name = "auto-news-translate"
version = "0.1.0"
description = "Automatically fetch rss and translate full article"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "crawl4ai>=0.7.6",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]
